test/errors/type/collections/set/__le.yasl
echo collections.set().__le(collections.set(), true)
